modified:   .classpath 	modified:   .settings/org.eclipse.wst.common.component 	modified:   pom.xml 	new file:   src/main/java/com/teamzc/controller/HomeController.java 	new file:   src/main/resources/META-INF/spring/spring-mvc-single-domain.xml 	modified:   src/main/resources/META-INF/spring/spring-mvc.xml 	new file:   src/main/webapp/WEB-INF/views/home.html 	modified:   src/main/webapp/WEB-INF/web.xml

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,24 @@
   <description>Spring MVC Web Application (not Spring Boot)</description>
 
   <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-war-plugin</artifactId>
+          <version>${maven-war-plugin.version}</version>
+          <configuration>
+            <warName>${project.artifactId}</warName>
+            <archive>
+              <addMavenDescriptor>false</addMavenDescriptor>
+              <manifest>
+                <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+              </manifest>
+            </archive>
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
   </build>
 
   <dependencies>
