--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -38,17 +38,19 @@
 
   <!-- Spring MVC アプリの場合、だいたいは唯一のサーブレットを登録します。 -->
   <servlet>
-    <servlet-name>appServlet</servlet-name>
+    <servlet-name>dispatcherServlet</servlet-name>
     <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
     <init-param>
       <param-name>contextConfigLocation</param-name>
       <!-- ApplicationContext for Spring MVC -->
       <param-value>classpath*:META-INF/spring/spring-mvc.xml</param-value>
     </init-param>
+    <!-- Servletコンテナの起動と同時にインスタンス化、および初期化したい場合に定義します。 -->
+    <!-- 起動する順番を0以上の整数値で記述し、値が小さい数から順にロードされます。 -->
     <load-on-startup>1</load-on-startup>
   </servlet>
   <servlet-mapping>
-    <servlet-name>appServlet</servlet-name>
+    <servlet-name>dispatcherServlet</servlet-name>
     <url-pattern>/</url-pattern>
   </servlet-mapping>
 
