--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,11 @@
       <version>${spring.version}</version>
     </dependency>
     <dependency>
+      <groupId>javax.inject</groupId>
+      <artifactId>javax.inject</artifactId>
+      <version>${javax.inject.version}</version>
+    </dependency>
+    <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>javax.servlet-api</artifactId>
       <!-- 動作時はTomcat のライブラリを使用するので開発時だけ依存する。 -->
@@ -111,6 +116,28 @@
     </dependency>
     <!-- Database End -->
     <!-- Utils Start -->
+    <dependency>
+      <groupId>org.hibernate.validator</groupId>
+      <artifactId>hibernate-validator</artifactId>
+      <version>${hibernate-validator.version}</version>
+    </dependency>
+    <!-- QR Code Start -->
+    <dependency>
+      <groupId>com.google.zxing</groupId>
+      <artifactId>core</artifactId>
+      <version>${zxing.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.zxing</groupId>
+      <artifactId>javase</artifactId>
+      <version>${zxing.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>commons-codec</groupId>
+      <artifactId>commons-codec</artifactId>
+      <version>${commons-codec.version}</version>
+    </dependency>
+    <!-- QR Code End -->
     <!-- Utils End -->
   </dependencies>
 
@@ -125,11 +152,15 @@
     <!-- Dependency Versions -->
     <spring.version>5.2.9.RELEASE</spring.version>
     <javax.servlet-api.version>4.0.1</javax.servlet-api.version>
+    <javax.inject.version>1</javax.inject.version>
     <thymeleaf.version>3.0.11.RELEASE</thymeleaf.version>
     <thymeleaf.extras.version>3.0.4.RELEASE</thymeleaf.extras.version>
     <logback.version>1.2.3</logback.version>
     <mysql.version>8.0.18</mysql.version>
     <mybatis.version>3.5.5</mybatis.version>
     <mybatis-spring.version>2.0.5</mybatis-spring.version>
+    <hibernate-validator.version>6.1.6.Final</hibernate-validator.version>
+    <zxing.version>3.4.1</zxing.version>
+    <commons-codec.version>1.15</commons-codec.version>
   </properties>
 </project>
